examples/test/testpolicy16297.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16297
  namespace: namespace29
spec:
  podSelector:
    matchLabels:
      key8: value33
      key11: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value18
          key20: value30
          key5: value48
      podSelector:
        matchLabels:
          key4: value17
          key0: value42
